JSsidebar: Fix alignment options, too many in one row
This was affecting spreadsheet, presentation and drawing doc type

Make sure the alignment container does not contain too many
elements in one row.

- 1st normal alignment properties; 2nd left-to-right/left icons
- and then ensure the last parent goes into a new row

--- a/browser/css/jssidebar.css
+++ b/browser/css/jssidebar.css
@@ -149,6 +149,12 @@ td.jsdialog .jsdialog.cell.sidebar {
 	width: auto;
 }
 
+.spreadsheet-document + #sidebar-dock-wrapper #ScAlignmentPropertyPanelPanelExpander #box3 > div:last-of-type,
+.presentation-doctype + #sidebar-dock-wrapper #ParaPropertyPanelPanelExpander #box1 > div:last-of-type,
+.drawing-doctype + #sidebar-dock-wrapper #ParaPropertyPanelPanelExpander #box1 > div:last-of-type {
+	display: table-row;
+}
+
 .sidebar.jsdialog.checkbutton {
 	font-size: 13px;
 }
